# cmaketemplate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.py
cmake/: options.cmake
cmake/config/: config_armv7l-linux.cmake  config_x86_64-linux.cmake
cmake/option/: option_armv7l-linux.cmake  option_i686-linux.cmake  option_linux-common.cmake  option_x86_64-linux.cmake
src/: CMakeLists.txt  helloworld.cpp  helloworld_test.cpp
